#128 Remove the endorsed dir vm option because it is no longer supported since java 9+